--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,30 +9,43 @@ include(${QT_USE_FILE})
 add_definitions(${QT_DEFINITIONS})
 
 set( srcs main.cpp
-  #ArmSim.cpp
-  #Visualizer.cpp
   Arm.cpp
-  #ArmControlPanel.cpp
-  #SearchWidget.cpp
-  #Search.cpp
-  #SearchControlPanel.cpp
+  ArmSim.cpp
+  Visualizer.cpp
+  ArmControlPanel.cpp
+  SearchWidget.cpp
+  SearchControlPanel.cpp )
+
+set( maze_srcs maze_main.cpp
   MazeStates.cpp
   MazeWidget.cpp )
 
-set( headers #ArmSim.h
-  #Visualizer.h
-  #ArmControlPanel.h
-  #SearchWidget.h
-  #SearchControlPanel.h
-  MazeWidget.h )
+set( headers ArmSim.h
+  Visualizer.h
+  ArmControlPanel.h
+  SearchWidget.h
+  SearchControlPanel.h )
+
+set( maze_headers MazeWidget.h )
 
 Qt4_wrap_cpp( headers_moc ${headers} )
+Qt4_wrap_cpp( maze_headers_moc ${maze_headers} )
 
-add_executable(ara
+add_executable(arm_ara
   ${srcs}
   ${headers_moc} )
 
 target_link_libraries(
-  ara
+  arm_ara
+  ${QT_LIBRARIES}
+)
+
+add_executable(maze_ara
+  ${maze_srcs}
+  ${maze_headers_moc}
+)
+
+target_link_libraries(
+  maze_ara
   ${QT_LIBRARIES}
 )
