Receives status messages

--- a/lcmtypes/Makefile
+++ b/lcmtypes/Makefile
@@ -1,3 +1,5 @@
 gen:
 	lcm-gen -x dynamixel_command_t.lcm; \
-	lcm-gen -x dynamixel_command_list_t.lcm
+	lcm-gen -x dynamixel_command_list_t.lcm; \
+	lcm-gen -x dynamixel_status_t.lcm; \
+	lcm-gen -x dynamixel_status_list_t.lcm;
