Sets up a template specialization for probcog arm continuous collision checks.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -35,7 +35,8 @@ set( maze_srcs maze_main.cpp
 set( robot_srcs robot_main.cpp
   ProbCogArm.cpp
   ProbCogSearchStates.cpp
-  3DCollisionWorld.cpp)
+  3DCollisionWorld.cpp
+  ProbCogArmCollision.cpp )
 
 set( headers ArmSim.h
   Visualizer.h
