--- a/lcmtypes/Makefile
+++ b/lcmtypes/Makefile
@@ -3,4 +3,6 @@ gen:
 	lcm-gen -x dynamixel_command_list_t.lcm; \
 	lcm-gen -x dynamixel_status_t.lcm; \
 	lcm-gen -x dynamixel_status_list_t.lcm; \
-	lcm-gen -x search_target_t.lcm;
+	lcm-gen -x search_target_t.lcm; \
+	lcm-gen -x bbox_info_t.lcm; \
+	lcm-gen -x arm_collision_boxes_t.lcm;
