--- a/lcmtypes/Makefile
+++ b/lcmtypes/Makefile
@@ -5,4 +5,8 @@ gen:
 	lcm-gen -x dynamixel_status_list_t.lcm; \
 	lcm-gen -x search_target_t.lcm; \
 	lcm-gen -x bbox_info_t.lcm; \
-	lcm-gen -x arm_collision_boxes_t.lcm;
+	lcm-gen -x arm_collision_boxes_t.lcm; \
+	lcm-gen -x object_data_t.lcm; \
+	lcm-gen -x observations_t.lcm; \
+	lcm-gen -x categorized_data_t.lcm; \
+	lcm-gen -x category_t.lcm;
