Initial work on an interface for Soar to control via LCM.

--- a/lcmtypes/Makefile
+++ b/lcmtypes/Makefile
@@ -1,12 +1,14 @@
 gen:
-	lcm-gen -x dynamixel_command_t.lcm; \
-	lcm-gen -x dynamixel_command_list_t.lcm; \
-	lcm-gen -x dynamixel_status_t.lcm; \
-	lcm-gen -x dynamixel_status_list_t.lcm; \
-	lcm-gen -x search_target_t.lcm; \
-	lcm-gen -x bbox_info_t.lcm; \
-	lcm-gen -x arm_collision_boxes_t.lcm; \
-	lcm-gen -x object_data_t.lcm; \
-	lcm-gen -x observations_t.lcm; \
-	lcm-gen -x categorized_data_t.lcm; \
+	lcm-gen -x dynamixel_command_t.lcm;
+	lcm-gen -x dynamixel_command_list_t.lcm;
+	lcm-gen -x dynamixel_status_t.lcm;
+	lcm-gen -x dynamixel_status_list_t.lcm;
+	lcm-gen -x search_target_t.lcm;
+	lcm-gen -x bbox_info_t.lcm;
+	lcm-gen -x arm_collision_boxes_t.lcm;
+	lcm-gen -x object_data_t.lcm;
+	lcm-gen -x observations_t.lcm;
+	lcm-gen -x categorized_data_t.lcm;
 	lcm-gen -x category_t.lcm;
+	lcm-gen -x planner_command_t.lcm;
+	lcm-gen -x planner_response_t.lcm;
