Hooray, the search works with the new search_request and search_progress_info structures for the maze. Need to change over the other executables though.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -86,6 +86,7 @@ add_executable(maze_ara
 target_link_libraries(
   maze_ara
   ${QT_LIBRARIES}
+  ${Boost_LIBRARIES}
 )
 
 add_executable(robot_ara
