For now, really don't need OMPL to compile.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,8 +36,8 @@ set( robot_srcs robot_main.cpp
   FetchArm.cpp
   ProbCogSearchStates.cpp
   3DCollisionWorld.cpp
-  ProbCogArmCollision.cpp
-  RRTStarPlanner.cpp )
+  ProbCogArmCollision.cpp )
+  #RRTStarPlanner.cpp )
 
 set( rosie_srcs rosie_main.cpp
   PlannerInterface.cpp
@@ -100,7 +100,7 @@ target_link_libraries(
   robot_ara
   lcm
   fcl
-  ompl
+  #ompl
   ${Boost_LIBRARIES}
 )
 
