Makes the collision boxes for the arm cyliders instead, except for the hand and base. Had to move publishing over to the collision world, which is probably fine for the long term. Updated the arm widths to be as they appear in the simulator.

--- a/lcmtypes/Makefile
+++ b/lcmtypes/Makefile
@@ -5,6 +5,7 @@ gen:
 	lcm-gen -x dynamixel_status_list_t.lcm;
 	lcm-gen -x search_target_t.lcm;
 	lcm-gen -x bbox_info_t.lcm;
+	lcm-gen -x cylinder_info_t.lcm;
 	lcm-gen -x arm_collision_boxes_t.lcm;
 	lcm-gen -x object_data_t.lcm;
 	lcm-gen -x observations_t.lcm;
